--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,5 +9,9 @@
 <ion-content padding>
   The world is your oyster.
   <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
-  <p>token={{token}}</p>
+  <ion-item>
+    <ion-label>Token</ion-label>
+    <ion-input value="{{token}}"></ion-input>
+  </ion-item>
+  <ion-button (click)="writeClipboard()">Copy</ion-button>
 </ion-content>
